# sentinel-vision

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 33e660f5b636_create_videos_and_detections.py
backend/app/: dependencies.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/domain/: entities.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/ai/: __init__.py  anomaly_engine.py  openai_service.py  yolo_service.py
backend/app/infrastructure/database/: models.py  repositories.py  session.py
backend/app/infrastructure/tasks/: celery_app.py  video_tasks.py
backend/app/repositories/: base.py
backend/app/schemas/: chat.py  detection.py  video.py
backend/app/services/: processing_service.py  rag_service.py  video_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  VideoCard.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Upload.tsx  VideoDetail.tsx  VideoList.tsx
frontend/src/stores/: chatStore.ts  uploadStore.ts  videoStore.ts
frontend/src/types/: index.ts
